updata table and quality-list

--- a/afterlife-front-end/src/styles.scss
+++ b/afterlife-front-end/src/styles.scss
@@ -1,18 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 /* Application-wide Styles */
+html,
 body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #f0f8ff;
-  padding-top: 60px;
   height: 100%;
 }
-
-body * {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+/* @import "~bootstrap/scss/bootstrap"; */
