commit all function

--- a/afterlife-front-end/src/app/modules/dashboard/dashboard.component.html
+++ b/afterlife-front-end/src/app/modules/dashboard/dashboard.component.html
@@ -8,13 +8,8 @@
 
 <br>
 
-<div>
-    <div>Line charts</div>
-    <div>Line charts</div>
-    <div>Line charts</div>
-    <div>Line charts</div>
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="Tabs-card">
+    <app-widget-card></app-widget-card>
 </div>
 
 <mat-divider></mat-divider>
-
-<br>
