--- a/afterlife-front-end/src/app/shared/components/siderbar/siderbar.component.html
+++ b/afterlife-front-end/src/app/shared/components/siderbar/siderbar.component.html
@@ -13,8 +13,8 @@
     <h2 matSubheader>Pages</h2>
 
     <a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dashboard</a>
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">Posts</a>
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/articles">Articles</a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">Страница со списком прибывших душ</a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/survey">Страница с опросами</a>
 
     <mat-divider></mat-divider>
 
