--- a/afterlife-front-end/src/app/shared/widgets/card/card.component.html
+++ b/afterlife-front-end/src/app/shared/widgets/card/card.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group dynamicHeight>
     <mat-tab label="Открыта">
         <div class="example-large-box mat-elevation-z4">
-            <button mat-button (click)="openDialog()" id="open">Добавить</button>
+            <button mat-button (click)="openDialog()" id="open">На следующий</button>
         </div>
     </mat-tab>
     <mat-tab label="В поиске">
