--- a/afterlife-front-end/src/app/modules/posts/posts.component.html
+++ b/afterlife-front-end/src/app/modules/posts/posts.component.html
@@ -1,4 +1,17 @@
 <div>
+    <section class="prosecutor">
+        <h2>Досье прокурора</h2>
+        <app-file-uploader></app-file-uploader>
+    </section>
+    <section class="lawyer">
+        <h2>Досье адвоката</h2>
+        <app-file-uploader></app-file-uploader>
+    </section>
+    <br>
+    <br>
+</div>
+
+<div>
     <table mat-table
         [dataSource]="dataSource" multiTemplateDataRows
         class="mat-elevation-z8">
@@ -12,7 +25,10 @@
         <div class="example-element-detail"
         [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
         <div class="example-element-diagram">
-            <div>Отправлено: 01.01.2021</div>
+            <div>
+                <div>Отправлено: 01.01.2021</div>
+                <app-file-uploader></app-file-uploader>
+            </div>
         </div>
         <div class="example-element-description">
         {{element.description}}
@@ -30,3 +46,4 @@
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
 </div>
+
