--- a/afterlife-front-end/src/app/shared/widgets/dialog-open/dialog-open.component.html
+++ b/afterlife-front-end/src/app/shared/widgets/dialog-open/dialog-open.component.html
@@ -1,12 +1,18 @@
 <h1 mat-dialog-title>Вакасия</h1>
 <mat-divider></mat-divider>
-<form class="Name">
+<form action="/demo/demo_form.asp">
     <mat-label>ФИО: </mat-label>
     <input matInput placeholder="name" value="">
+    <mat-label>Должность: </mat-label>
+    <input matInput placeholder="position" value="">
+    <mat-label>Место: </mat-label>
+    <input matInput placeholder="place" value="">
+    <br><br>
+    <input type="submit" value="Submit">
 </form>
-<div mat-dialog-content>Должность: Архангел</div>
-<div mat-dialog-content>Место работы: Рай</div>
+
 <mat-divider></mat-divider>
+
 <div>
     <h3 mat-dialog-title>Документ</h3>
     <app-file-uploader></app-file-uploader>
