--- a/afterlife-front-end/src/app/modules/survey/survey.component.html
+++ b/afterlife-front-end/src/app/modules/survey/survey.component.html
@@ -18,11 +18,24 @@
     </thead>
     <tbody>
         <tr>
-            <td>Опрос качества</td>
+            <td>Опрос качества 1</td>
             <td>
                 <a href="https://www.google.com/intl/ru_ru/forms/about/" target="_blank">google sheet</a>
             </td>
-            <td>Пыточники</td>
+            <td>Пыточника</td>
+            <td>
+                <button class="btn btn-info">Edit</button>
+                <button class="btn btn-danger">Delete</button>
+            </td>
+        </tr>
+    </tbody>
+    <tbody>
+        <tr>
+            <td>Опрос качества 2</td>
+            <td>
+                <a href="https://www.google.com/intl/ru_ru/forms/about/" target="_blank">google sheet</a>
+            </td>
+            <td>Грешника</td>
             <td>
                 <button class="btn btn-info">Edit</button>
                 <button class="btn btn-danger">Delete</button>
