added modules of vacancy and quality

--- a/afterlife-front-end/src/app/modules/posts/posts.component.html
+++ b/afterlife-front-end/src/app/modules/posts/posts.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <section class="prosecutor">
         <h2>Досье прокурора</h2>
         <app-file-uploader></app-file-uploader>
@@ -9,7 +9,7 @@
     </section>
     <br>
     <br>
-</div>
+</div> -->
 
 <div>
     <app-souls-page></app-souls-page>
