functions for classificator

--- a/afterlife-front-end/src/app/modules/quality/compoment/measurement-page/measurement-page.component.html
+++ b/afterlife-front-end/src/app/modules/quality/compoment/measurement-page/measurement-page.component.html
@@ -1,1 +1,4 @@
-<p>measurement-page works!</p>
+<ng-container *ngIf="measurements$ | async as measurements">
+    <app-quality [measurements]="measurements.results"></app-quality>
+  </ng-container>
+  
