--- a/afterlife-front-end/src/app/modules/classificator/components/souls-table/souls-table.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/souls-table/souls-table.component.html
@@ -20,7 +20,7 @@
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef> Status </th>
     <td mat-cell *matCellDef="let element">
-      <ng-container *ngIf="asTypedModel(element) as typedElement">
+      <button mat-button (click)="openReportDialog()" id="open"><ng-container *ngIf="asTypedModel(element) as typedElement">
         <span *ngIf="typedElement.goodnessReport == null && typedElement.sinsReport == null">
           Reports not uploaded
         </span>
@@ -36,8 +36,16 @@
         <span *ngIf="typedElement.goodnessReport != null && typedElement.sinsReport != null">
           Reports are uploaded
         </span>
-      </ng-container>
+      </ng-container></button>
     </td>
+  </ng-container>
+
+  <ng-container matColumnDef="sinsReport">
+    <th mat-header-cell *matHeaderCellDef> SinsReport </th>
+  </ng-container>
+
+  <ng-container matColumnDef="goodnessReport">
+    <th mat-header-cell *matHeaderCellDef> GoodnessReport </th>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
