added paginator for list of souls

--- a/afterlife-front-end/src/app/modules/classificator/components/souls-table/souls-table.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/souls-table/souls-table.component.html
@@ -51,3 +51,9 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+<mat-paginator [length]="100"
+  [pageSize]="10"
+  [pageSizeOptions]="[5, 10, 25, 100]">
+</mat-paginator>
+
+
