deleted unnecessary files in shared and added files of model and service for vacancy

--- a/afterlife-front-end/src/app/modules/dashboard/dashboard.component.html
+++ b/afterlife-front-end/src/app/modules/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div>
-    <app-widget-qualities></app-widget-qualities>
+    <app-measurement-page></app-measurement-page>
 </div>
 
 <br>
@@ -9,7 +9,7 @@
 <br>
 
 <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="Tabs-card">
-    <app-widget-card></app-widget-card>
+    <app-tab></app-tab>
 </div>
 
 
