--- a/afterlife-front-end/src/app/modules/quality/compoment/measurement-page/measurement-page.component.html
+++ b/afterlife-front-end/src/app/modules/quality/compoment/measurement-page/measurement-page.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="measurements$ | async as measurements">
-    <app-quality [measurements]="measurements.results"></app-quality>
+    <app-quality></app-quality>
   </ng-container>
   
