--- a/afterlife-front-end/src/app/modules/vacancy/components/dialog/dialog.component.html
+++ b/afterlife-front-end/src/app/modules/vacancy/components/dialog/dialog.component.html
@@ -1,15 +1,20 @@
 <h1 mat-dialog-title>Вакасия</h1>
 <mat-divider></mat-divider>
-<form>
+<form class="form">
+    
     <mat-label>ФИО: </mat-label>
-    <input matInput formControlName="name" placeholder="name" value="">
+    <input matInput formControlName="name" placeholder="name" value=""> 
+    
     <mat-label>Должность: </mat-label>
     <input matInput formControlName="position" placeholder="position" value="">
+    
     <mat-label>Место: </mat-label>
     <input matInput formControlName="place" placeholder="place" value="">
+    
     <br><br>
+    
     <input type="submit" value="Submit">
-</form>
+</form> 
 
 <mat-divider></mat-divider>
 
@@ -17,6 +22,9 @@
     <h3 mat-dialog-title>Документ</h3>
     <app-file-uploader></app-file-uploader>
 </div>
+
+<mat-divider></mat-divider>
+
 <div mat-dialog-actions>
 <button mat-button mat-dialog-close (click)="closeDialog()">Close</button>
 </div>
