--- a/afterlife-front-end/src/app/modules/vacancy/components/tab/tab/tab.component.html
+++ b/afterlife-front-end/src/app/modules/vacancy/components/tab/tab/tab.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group dynamicHeight>
   <mat-tab label="Открыта">
       <div class="example-large-box mat-elevation-z4">
-          <button mat-button (click)="openDialog()" id="open">На следующий</button>
+          <button mat-raised-button (click)="openDialog()" id="open" class="button-row">Вакансия Открыта</button>
       </div>
   </mat-tab>
   <mat-tab label="В поиске">
