--- a/afterlife-front-end/src/app/modules/posts/posts.component.html
+++ b/afterlife-front-end/src/app/modules/posts/posts.component.html
@@ -1,11 +1,11 @@
 <!-- <div>
     <section class="prosecutor">
         <h2>Досье прокурора</h2>
-        <app-file-uploader></app-file-uploader>
+        <app-sins-uploader></app-sins-uploader>
     </section>
     <section class="lawyer">
         <h2>Досье адвоката</h2>
-        <app-file-uploader></app-file-uploader>
+        <app-sins-uploader></app-sins-uploader>
     </section>
     <br>
     <br>
