--- a/afterlife-front-end/src/app/modules/vacancy/components/dialog/dialog.component.html
+++ b/afterlife-front-end/src/app/modules/vacancy/components/dialog/dialog.component.html
@@ -1,26 +1,26 @@
 <h1 mat-dialog-title>Вакасия</h1>
 <mat-divider></mat-divider>
 <form class="form">
-    
+
     <mat-label>ФИО: </mat-label>
-    <input matInput formControlName="name" placeholder="name" value=""> 
-    
+    <input matInput formControlName="name" placeholder="name" value="">
+
     <mat-label>Должность: </mat-label>
     <input matInput formControlName="position" placeholder="position" value="">
-    
+
     <mat-label>Место: </mat-label>
     <input matInput formControlName="place" placeholder="place" value="">
-    
+
     <br><br>
-    
+
     <input type="submit" value="Submit">
-</form> 
+</form>
 
 <mat-divider></mat-divider>
 
 <div>
     <h3 mat-dialog-title>Документ</h3>
-    <app-file-uploader></app-file-uploader>
+   <!-- <app-file-uploader></app-file-uploader> -->
 </div>
 
 <mat-divider></mat-divider>
