--- a/afterlife-front-end/src/app/modules/classificator/components/souls-table/souls-table.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/souls-table/souls-table.component.html
@@ -20,7 +20,7 @@
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef> Status </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-button (click)="openReportDialog()" id="open"><ng-container *ngIf="asTypedModel(element) as typedElement">
+      <button mat-button *ngIf="asTypedModel(element) as typedElement" (click)="openReportDialog(typedElement)" id="open"><ng-container *ngIf="asTypedModel(element) as typedElement">
         <span *ngIf="typedElement.goodnessReport == null && typedElement.sinsReport == null">
           Reports not uploaded
         </span>
