--- a/afterlife-front-end/src/app/modules/posts/posts.component.scss
+++ b/afterlife-front-end/src/app/modules/posts/posts.component.scss
@@ -34,3 +34,20 @@ tr.example-element-row:not(.example-expanded-row):active {
 .lawyer {
   right: 20;
 }
+
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+mat-drawer {
+  width: 350px;
+}
+
+mat-drawer-container {
+  height: 100%;
+}
+
+mat-drawer-content {
+  padding: 20px;
+}
