--- a/afterlife-front-end/src/app/modules/vacancy/components/dialog/dialog.component.html
+++ b/afterlife-front-end/src/app/modules/vacancy/components/dialog/dialog.component.html
@@ -17,11 +17,11 @@
 </form>
 
 <mat-divider></mat-divider>
-
+<!-- 
 <div>
     <h3 mat-dialog-title>Документ</h3>
-   <!-- <app-file-uploader></app-file-uploader> -->
-</div>
+     <app-file-uploader></app-file-uploader>  
+</div> -->
 
 <mat-divider></mat-divider>
 
