--- a/afterlife-front-end/src/app/shared/components/siderbar/siderbar.component.html
+++ b/afterlife-front-end/src/app/shared/components/siderbar/siderbar.component.html
@@ -12,7 +12,7 @@
 
     <h2 matSubheader>Pages</h2>
 
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dashboard</a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/home">Dashboard</a>
     <a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">Страница со списком прибывших душ</a>
     <a mat-list-item routerLinkActive="list-item-active" routerLink="/survey">Страница с опросами</a>
 
