Modify filed of login
В окне авторизации на втором поле ввода следует использовать подсказку password

--- a/afterlife-front-end/src/app/modules/login/login.component.html
+++ b/afterlife-front-end/src/app/modules/login/login.component.html
@@ -4,8 +4,8 @@
 
         <form [formGroup]="login">
             <h2>LOGIN</h2>
-            <input type="text" placeholder="Name" class="inp" formControlName="name"/>
-            <input type="text" placeholder="Email" class="inp" formControlName="email"/>
+            <input type="text" placeholder="Username" class="inp" formControlName="username"/>
+            <input type="text" placeholder="Password" class="inp" formControlName="password"/>
             <div class="btns">
                 <button (click)="loginSubmit(login.value)">Login</button>
             </div>
