Modify button - "Submit"

--- a/afterlife-front-end/src/app/modules/vacancy/components/dialog/dialog.component.html
+++ b/afterlife-front-end/src/app/modules/vacancy/components/dialog/dialog.component.html
@@ -13,7 +13,10 @@
 
     <br><br>
 
-    <input type="submit" value="Submit">
+    <!-- <input type="submit" value="Submit"> -->
+    <div class="example-button-row">
+        <button mat-raised-button color="primary">Submit</button>
+    </div>
 </form>
 
 <mat-divider></mat-divider>
