--- a/afterlife-front-end/src/app/modules/survey/survey.component.html
+++ b/afterlife-front-end/src/app/modules/survey/survey.component.html
@@ -60,5 +60,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-
+  </mat-drawer-content>
+</mat-drawer-container>
 <app-footer></app-footer>
