--- a/afterlife-front-end/src/app/shared/components/header/header.component.html
+++ b/afterlife-front-end/src/app/shared/components/header/header.component.html
@@ -9,9 +9,11 @@
         <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
             <ul fxLayout="row" fxLayoutGap="20px">
                 <li>
+                  <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%BE%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_%D0%BA%D0%BE%D0%BC%D0%B5%D0%B4%D0%B8%D1%8F" target="_blank">
                     <button mat-icon-button>
                         <mat-icon>settings</mat-icon>
                     </button>
+                   </a>
                 </li>
                 <li>
                     <button mat-icon-button>
