--- a/afterlife-front-end/src/app/shared/components/header/header.component.html
+++ b/afterlife-front-end/src/app/shared/components/header/header.component.html
@@ -16,9 +16,11 @@
                    </a>
                 </li>
                 <li>
+                  <a href="https://docs.google.com/document/d/1LE3tvV94Qf1Yx_8PfC2HM9SQZFZZNPDHRRUaRq20iSA/edit" target="_blank">
                     <button mat-icon-button>
                         <mat-icon>help_outline</mat-icon>
                     </button>
+                  </a>
                 </li>
                 <li>
                     <button mat-button [matMenuTriggerFor]="menu">
