--- a/afterlife-front-end/src/app/modules/vacancy/components/tab/tab/tab.component.html
+++ b/afterlife-front-end/src/app/modules/vacancy/components/tab/tab/tab.component.html
@@ -1,7 +1,37 @@
 <mat-tab-group dynamicHeight>
   <mat-tab label="Открыта">
-      <div class="example-large-box mat-elevation-z4">
-          <button mat-raised-button (click)="openDialog()" id="open" class="button-row">Вакансия Открыта</button>
+      <div>
+        <mat-card>
+          <mat-card-header>
+            <mat-toolbar class="toolbar">
+              <mat-card-title>Список Информации</mat-card-title>
+              <span class="toolbar-spacer"></span>
+              <mat-icon (click)="addContact()">add</mat-icon>
+            </mat-toolbar>
+          </mat-card-header>
+        
+          <mat-card-content>
+            <div class="container">
+              <table class="table">
+                <thead>
+                  <th>Фамилия</th>
+                  <th>Имя</th>
+                  <th>Должность</th>
+                  <th>Место работаы</th>
+                </thead>
+                <tr *ngFor="let Contact of ContactList">
+                  <td>{{Contact.FirstName}}</td>
+                  <td>{{Contact.LastName}}</td>
+                  <td>{{Contact.Contact}}</td>
+                  <td>{{Contact.Email}}</td>
+                  <td><mat-icon (click)="editContact(Contact.ID)">edit</mat-icon></td>
+                  <td><mat-icon (click)="deleteContact(Contact.ID)">delete</mat-icon></td>
+              
+                </tr>
+              </table>
+            </div>
+          </mat-card-content>
+        </mat-card>
       </div>
   </mat-tab>
   <mat-tab label="В поиске">
