--- a/afterlife-front-end/src/app/modules/vacancy/components/tab/tab/tab.component.scss
+++ b/afterlife-front-end/src/app/modules/vacancy/components/tab/tab/tab.component.scss
@@ -23,3 +23,12 @@
   display: table-cell;
   width: 490px;
 }
+.toolbar {
+  background-color: #4b0082;
+  border-radius: 5px;
+  color: white;
+}
+
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
