--- a/afterlife-front-end/src/app/modules/login/login.component.html
+++ b/afterlife-front-end/src/app/modules/login/login.component.html
@@ -1,39 +1,21 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-        <button mat-icon-button (click)="toggleSideBar()">
-            <mat-icon>menu</mat-icon>
-        </button>
-
-        <span> AfterLife 2.0 </span>
-
-        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
-            <ul fxLayout="row" fxLayoutGap="20px">
-                <li>
-                  <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%BE%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_%D0%BA%D0%BE%D0%BC%D0%B5%D0%B4%D0%B8%D1%8F" target="_blank">
-                    <button mat-icon-button>
-                        <mat-icon>settings</mat-icon>
-                    </button>
-                   </a>
-                </li>
-                <li>
-                  <a href="https://docs.google.com/document/d/1LE3tvV94Qf1Yx_8PfC2HM9SQZFZZNPDHRRUaRq20iSA/edit" target="_blank">
-                    <button mat-icon-button>
-                        <mat-icon>help_outline</mat-icon>
-                    </button>
-                  </a>
-                </li>
-                <li>
-                    <button mat-button [matMenuTriggerFor]="menu">
-                        <mat-icon>person_outline</mat-icon>
-                    </button>
-                    <mat-menu #menu="matMenu">
-                        <button mat-menu-item (click)="logout">
-                            <mat-icon>exit_to_app</mat-icon>
-                            Sign out
-                        </button>
-                    </mat-menu>
-                </li>
-            </ul>
-        </div>
-    </mat-toolbar-row>
-</mat-toolbar>
+<!-- login.component.html -->
+<div class="container" style="display: flex;justify-content: center;align-items: center;height: 100vh;">
+  <div class="card" style="width: 50%;">
+    <div class="card-body">
+      <h5 class="card-title">Login Form</h5>
+      <div class="card-text">
+        <form [formGroup]="login">
+          <div>
+            <label>Username</label>
+            <input type="text" placeholder="name" class="inp" formControlName="name"/>
+          </div>
+          <div>
+            <label>Password</label>
+            <input type="password" placeholder="password" class="inp" formControlName="email"/>
+          </div>
+          <button type="submit" class="btn btn-primary" (click)="loginSubmit(login.value)" >Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
