--- a/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
@@ -4,9 +4,9 @@
    <mat-card class="example-card">
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>{{soul.firstName}} {{soul.lastName}}</mat-card-title>
-        <mat-card-subtitle>{{soul.dateOfDeath}}</mat-card-subtitle>
-        <mat-card-title>Места классификатора: {{soul.classifiedAfterworldSection.afterwoldKind}}</mat-card-title>
+        <mat-card-title *ngIf="soul>{{soul.firstName}} {{soul.lastName}}</mat-card-title>
+        <mat-card-subtitle *ngIf="soul>{{soul.dateOfDeath}}</mat-card-subtitle>
+        <mat-card-title *ngIf="soul.classifiedAfterworldSection">Места классификатора: {{soul.classifiedAfterworldSection.afterwoldKind}}</mat-card-title>
         </mat-card-header>
         <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
         <mat-card-content>
@@ -69,18 +69,16 @@
             Currently I am {{panelOpenState ? 'open' : 'closed'}}
             </mat-panel-description>
             </mat-expansion-panel-header>
-                <h3>Comment1: </h3>
-                    <p>I'm visible because I am open</p>
-                <h3>Comment2: </h3>
-                    <p>I'm visible because I am close</p>
-                <form class="example-form">
+                <h3>Комментарии: </h3>
+                    <p *ngIf="commentGroups[0]">{{commentGroups[0].text}}</p>
+            </mat-expansion-panel>
+            <form class="example-form">
                     <mat-form-field class="example-full-width">
                         <mat-label>Leave a comment</mat-label>
                         <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
                     </mat-form-field>
-                </form>
-                <button mat-button>Submit</button>
-            </mat-expansion-panel>
+            </form>
+            <button mat-button>Submit</button>
             </mat-accordion>
     </mat-card-content>
     <mat-card-actions>
