--- a/afterlife-front-end/src/app/shared/components/header/header.component.html
+++ b/afterlife-front-end/src/app/shared/components/header/header.component.html
@@ -27,7 +27,7 @@
                         <mat-icon>person_outline</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item (click)="logout">
+                        <button mat-menu-item (click)="logout()">
                             <mat-icon>exit_to_app</mat-icon>
                             Sign out
                         </button>
