--- a/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
@@ -10,6 +10,13 @@
         <mat-card-subtitle *ngIf="resultArgue">{{resultArgue.decisionText}}</mat-card-subtitle>    
     </mat-card-header>
         <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+        <div>
+            <button type="button" (click)="postMark()">Mark Argue</button>
+            <mat-card-subtitle *ngIf="resultMark">{{resultMark.decisionText}}</mat-card-subtitle>
+            <mat-card-subtitle *ngIf="resultMark">{{resultMark.isArguedByGod}}</mat-card-subtitle>
+            <mat-card-subtitle *ngIf="resultMark">{{resultMark.isArguedByDevil}}</mat-card-subtitle>
+        </div>
+     
         <mat-card-content>
             <h3>Report from Goodness</h3>
                 <table class="example-table mat-elevation-z8" mat-table matSort #TableOneSort="matSort" recycleRows [dataSource]="dataSourceOfgoodness">
