--- a/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
@@ -16,6 +16,17 @@
             <mat-card-subtitle *ngIf="resultMark">{{resultMark.isArguedByGod}}</mat-card-subtitle>
             <mat-card-subtitle *ngIf="resultMark">{{resultMark.isArguedByDevil}}</mat-card-subtitle>
         </div>
+        
+        <div>
+          <form name="form" #changePost="ngForm" (ngSubmit)="changeDecision(changePost.value)">
+              <input type="number" name="sectionIndex" ngModel placeholder="sectionIndex"> <br><br>
+              <input type="text" name="afterworldKind" ngModel placeholder="afterworldKind"> <br><br>
+              <button type="submit">Change</button>
+          </form>
+          <mat-card-subtitle *ngIf="resultChange?.godChangedDecision">GodChangedDecision: {{resultChange.godChangedDecision.afterwoldKind}}</mat-card-subtitle>
+          <mat-card-subtitle *ngIf="resultChange?.devilChangedDecision">devilChangedDecision: {{resultChange.devilChangedDecision.afterwoldKind}}</mat-card-subtitle>
+          <mat-card-subtitle *ngIf="resultChange">Decision: {{resultChange.decisionText}}</mat-card-subtitle>
+        </div>    
      
         <mat-card-content>
             <h3>Report from Goodness</h3>
