--- a/afterlife-front-end/src/app/shared/widgets/goodness-uploader/goodness-uploader.component.html
+++ b/afterlife-front-end/src/app/shared/widgets/goodness-uploader/goodness-uploader.component.html
@@ -1,6 +1,8 @@
-<input #fileUpload type="file"
-                       (change)="onFileSelected($event)">
+<div [hidden]="!isAdvocate">
+  <input #fileUpload type="file"
+                         (change)="onFileSelected($event)">
+  <div>
+    <button mat-raised-button (click)="upload()" color="primary" class="mat-focus-indicator mat-raised-button mat-button-base mat-primary">Upload</button>
+  </div>
 <div>
-  <button mat-raised-button (click)="upload()" color="primary" class="mat-focus-indicator mat-raised-button mat-button-base mat-primary">Upload</button>
-</div>
 
