--- a/afterlife-front-end/src/app/shared/widgets/sins-uploader/sins-uploader.component.html
+++ b/afterlife-front-end/src/app/shared/widgets/sins-uploader/sins-uploader.component.html
@@ -4,5 +4,5 @@
   <div>
     <button mat-raised-button (click)="upload()" color="primary" class="mat-focus-indicator mat-raised-button mat-button-base mat-primary">Upload</button>
   </div>
-<div>
+</div>
 
