--- a/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
@@ -95,7 +95,7 @@
             </mat-expansion-panel>
             </mat-accordion> 
             <br>
-            <h3>Оставайтесь со своим комментарием</h3>
+            <h3>Оставайтесь со своим комментарием(Read only HEAVEN_PROSECUTOR, HEAVEN_ADVOCATE)</h3>
             <form [hidden]="!isAdvocateOrProsecutor" name="form" #userPost="ngForm" (ngSubmit)="onSubmit(userPost.value)">
                 <input type="number" name="id" ngModel placeholder="id"> <br><br>
                 <input type="text" name="text" ngModel placeholder="comment"> <br><br>
